--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
     <title>AAA</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.3/react.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.3/react-dom.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+    <script src="react-with-addons.js"></script>
+    <script src="react-dom.js"></script>
+    <script src="jquery.js"></script>
+    <script src="browser.min.js"></script>
 </head>
 <body>
     <div id="container"></div>
